--- a/machines.cabal
+++ b/machines.cabal
@@ -33,29 +33,45 @@ source-repository head
 
 library
   build-depends:
-    base         == 4.*,
-    comonad      >= 3,
-    containers   >= 0.3 && < 0.6,
-    free         >= 3.1.1,
-    pointed      >= 3,
-    profunctors  >= 3,
-    semigroups   >= 0.8.3,
-    transformers == 0.3.*,
-    mtl          >= 2 && < 2.2
+    async             >= 2.0.1,
+    attoparsec        >= 0.10.4,
+    base              == 4.*,
+    bytestring        >= 0.10,
+    comonad           >= 3,
+    containers        >= 0.3 && < 0.6,
+    lifted-async      >= 0.1,
+    monad-control     >= 0.3.2,
+    pointed           >= 3,
+    profunctors       >= 3,
+    semigroups        >= 0.8.3,
+    transformers      == 0.3.*,
+    transformers-base >= 0.4,
+    mtl               >= 2 && < 2.2
 
   exposed-modules:
     Data.Machine
-    Data.Machine.Is
+    Data.Machine.Attoparsec
+    Data.Machine.ByteString
+    Data.Machine.Chunk
     Data.Machine.Fanout
+    Data.Machine.Is
+    Data.Machine.Loop
     Data.Machine.Mealy
     Data.Machine.Moore
-    Data.Machine.Process
     Data.Machine.Plan
+    Data.Machine.Process
     Data.Machine.Source
     Data.Machine.Tee
     Data.Machine.Type
     Data.Machine.Unread
     Data.Machine.Wye
+
+    Data.Machine.Concurrent
+    Data.Machine.Concurrent.AsyncStep
+    Data.Machine.Concurrent.Buffer
+    Data.Machine.Concurrent.Scatter
+    Data.Machine.Concurrent.Tee
+    Data.Machine.Concurrent.Wye
 
   default-language: Haskell2010
   other-extensions:
